kubernetes/apps/apps/obsidian-livesync/obsidian-livesync/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: obsidian-livesync
  labels:
    app: obsidian-livesync
spec:
  type: ClusterIP
  selector:
    app: obsidian-livesync
  ports:
    - name: http
      port: 5984
      targetPort: http
      protocol: TCP
